--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-tailwind/react": "^1.2.4",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
