--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^1.2.4",
+    "@next-auth/firebase-adapter": "^1.0.2",
+    "firebase": "^9.12.1",
     "next": "latest",
+    "next-auth": "^4.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
