--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "latest",
     "next-auth": "^4.14.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
