--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^1.2.4",
     "@next-auth/firebase-adapter": "1.0.1",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "draft-js": "^0.11.7",
     "firebase": "^9.12.1",
     "next": "latest",
     "next-auth": "^4.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.4.0"
   },
